[gd_scene load_steps=22 format=4 uid="uid://ip7anni7emmc"]

[ext_resource type="TileSet" uid="uid://b15m77bx602kw" path="res://location/000_prologue_kadath/tile/onyx_temple.tres" id="1_eenkp"]
[ext_resource type="Script" path="res://location/000_prologue_kadath/room/05_boss_room.gd" id="2_0db23"]
[ext_resource type="PackedScene" uid="uid://sfld8pt3bwlw" path="res://location/lib/script/object/warp.tscn" id="3_eyb6e"]
[ext_resource type="PackedScene" uid="uid://k1y4abtqqro7" path="res://location/lib/script/object/battle_spot.tscn" id="5_jdwon"]
[ext_resource type="PackedScene" uid="uid://ihknndack3n4" path="res://npc/enemy/thymiaterion/thymiaterion.tscn" id="6_2020d"]
[ext_resource type="Script" path="res://location/lib/script/object/enemy_spot.gd" id="6_mblpi"]
[ext_resource type="Texture2D" uid="uid://jjuk5n1nrjr" path="res://location/000_prologue_kadath/object/right_door.png" id="8_lox2j"]
[ext_resource type="Texture2D" uid="uid://colu5a43monrs" path="res://location/000_prologue_kadath/object/left_door.png" id="9_33mal"]
[ext_resource type="Texture2D" uid="uid://bf8vls8u5sbww" path="res://location/000_prologue_kadath/object/torch-sheet.png" id="10_q5ylt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4lfqm"]
size = Vector2(69, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5avj4"]
size = Vector2(288, 19)

[sub_resource type="Animation" id="Animation_jk7fo"]
resource_name = "boss_enter"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Thymiaterion:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Thymiaterion/Anim/Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-44, -197), Vector2(-44, -89)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_fall_sound"
}]
}

[sub_resource type="Animation" id="Animation_q7lv6"]
resource_name = "default"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rk4g2"]
_data = {
"boss_enter": SubResource("Animation_jk7fo"),
"default": SubResource("Animation_q7lv6")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_n5ert"]
atlas = ExtResource("10_q5ylt")
region = Rect2(0, 0, 15, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7yav"]
atlas = ExtResource("10_q5ylt")
region = Rect2(15, 0, 15, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_nubf2"]
atlas = ExtResource("10_q5ylt")
region = Rect2(30, 0, 15, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_1abqi"]
atlas = ExtResource("10_q5ylt")
region = Rect2(45, 0, 15, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_v22qr"]
atlas = ExtResource("10_q5ylt")
region = Rect2(60, 0, 15, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr13r"]
atlas = ExtResource("10_q5ylt")
region = Rect2(75, 0, 15, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_3u8eh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5ert")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7yav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nubf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1abqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v22qr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr13r")
}],
"loop": true,
"name": &"default",
"speed": 6.6
}]

[node name="Room" type="Node2D"]
y_sort_enabled = true
texture_filter = 1
script = ExtResource("2_0db23")
room_id = "05_boss_room"
used_rect = Rect2i(-144, -224, 288, 352)

[node name="Floor" type="TileMapLayer" parent="."]
y_sort_enabled = true
texture_filter = 1
use_parent_material = true
tile_map_data = PackedByteArray("AAD+////BgAAAAAAAAD/////BgAAAAAAAAD//wAABgAAAAAAAAAAAAAABgAAAAAAAAAAAP//BgAAAAAAAAD+/wAABgAAAAAAAAD///7/BgAAAAAAAAABAAEABgAAAAAAAAACAAEABgAAAAAAAAADAAEABgAAAAAAAAADAAAABgAAAAAAAAADAP//BgAAAAAAAAACAP//BgAAAAAAAAACAP7/BgAAAAAAAAABAP7/BgAAAAAAAAAAAP7/BgAAAAAAAAAAAAEABgAAAAAAAAACAAAABgAAAAAAAAABAAAABgAAAAAAAAABAP//BgAAAAAAAAD//wEABgAAAAAAAAD+/wEABgAAAAAAAAD9/wEABgAAAAAAAAD9/wAABgAAAAAAAAD9////BgAAAAAAAAD9//7/BgAAAAAAAAD+//7/BgAAAAAAAAD+//3/BgAAAAAAAAD///3/BgAAAAAAAAAAAPz/BgAAAAAAAAAAAP3/BgAAAAAAAAABAP3/BgAAAAAAAAACAP3/BgAAAAAAAAADAP7/BgAAAAAAAAAEAP//BgAAAAAAAAAEAAAABgAAAAAAAAAEAAEABgAAAAAAAAD8////BgAAAAAAAAD8/wAABgAAAAAAAAD8/wEABgAAAAAAAAD8//7/BgAAAAAAAAD8//3/BgAAAAAAAAD9//3/BgAAAAAAAAD9//z/BgAAAAAAAAD+//z/BgAAAAAAAAD+//v/BgAAAAAAAAD///v/BgAAAAAAAAAAAPv/BgAAAAAAAAABAPv/BgAAAAAAAAACAPv/BgAAAAAAAAACAPz/BgAAAAAAAAADAPz/BgAAAAAAAAADAP3/BgAAAAAAAAAEAP3/BgAAAAAAAAAEAP7/BgAAAAAAAAABAPz/BgAAAAAAAAD///z/BgAAAAAAAAD7////BgAAAAAAAAD7/wAABgAAAAAAAAD7/wEABgAAAAAAAAAFAP//BgAAAAAAAAAFAAAABgAAAAAAAAAFAAEABgAAAAAAAAD7//7/BgAAAAAAAAAFAP7/BgAAAAAAAAD6//7/BgAAAAAAAAD6////BgAAAAAAAAD6/wAABgAAAAAAAAD6/wEABgAAAAAAAAD7//3/BgAAAAAAAAD8//z/BgAAAAAAAAD9//v/BgAAAAAAAAD6//3/BgAAAAAAAAD6//z/BgAAAAAAAAD7//z/BgAAAAAAAAD7//v/BgAAAAAAAAD8//v/BgAAAAAAAAD8//r/BgAAAAAAAAD9//r/BgAAAAAAAAD+//r/BgAAAAAAAAD///r/BgAAAAAAAAAAAPr/BgAAAAAAAAABAPr/BgAAAAAAAAACAPr/BgAAAAAAAAADAPv/BgAAAAAAAAAEAPv/BgAAAAAAAAAEAPz/BgAAAAAAAAAFAPz/BgAAAAAAAAAFAP3/BgAAAAAAAAADAPr/BgAAAAAAAAD4//f/BgAAAAAAAAD4//j/BgAAAAAAAAD4//n/BgAAAAAAAAD4//r/BgAAAAAAAAD4//v/BgAAAAAAAAD4//z/BgAAAAAAAAD4//3/BgAAAAAAAAD4//7/BgAAAAAAAAD4////BgAAAAAAAAD4/wAABgAAAAAAAAD4/wEABgAAAAAAAAD4/wIABgAAAAAAAAD4/wMABgAAAAAAAAD4/wQABgAAAAAAAAD4/wUABgAAAAAAAAD4/wYABgAAAAAAAAD5//f/BgAAAAAAAAD5//j/BgAAAAAAAAD5//n/BgAAAAAAAAD5//r/BgAAAAAAAAD5//v/BgAAAAAAAAD5//z/BgAAAAAAAAD5//3/BgAAAAAAAAD5//7/BgAAAAAAAAD5////BgAAAAAAAAD5/wAABgAAAAAAAAD5/wEABgAAAAAAAAD5/wIABgAAAAAAAAD5/wMABgAAAAAAAAD5/wQABgAAAAAAAAD5/wUABgAAAAAAAAD5/wYABgAAAAAAAAD6//f/BgAAAAAAAAD6//j/BgAAAAAAAAD6//n/BgAAAAAAAAD6//r/BgAAAAAAAAD6//v/BgAAAAAAAAD6/wIABgAAAAAAAAD6/wMABgAAAAAAAAD6/wQABgAAAAAAAAD6/wUABgAAAAAAAAD6/wYABgAAAAAAAAD7//f/BgAAAAAAAAD7//j/BgAAAAAAAAD7//n/BgAAAAAAAAD7//r/BgAAAAAAAAD7/wIABgAAAAAAAAD7/wMABgAAAAAAAAD7/wQABgAAAAAAAAD7/wUABgAAAAAAAAD7/wYABgAAAAAAAAD8//f/BgAAAAAAAAD8//j/BgAAAAAAAAD8//n/BgAAAAAAAAD8/wIABgAAAAAAAAD8/wMABgAAAAAAAAD8/wQABgAAAAAAAAD8/wUABgAAAAAAAAD8/wYABgAAAAAAAAD9//f/BgAAAAAAAAD9//j/BgAAAAAAAAD9//n/BgAAAAAAAAD9/wIABgAAAAAAAAD9/wMABgAAAAAAAAD9/wQABgAAAAAAAAD9/wUABgAAAAAAAAD9/wYABgAAAAAAAAD+//f/BgAAAAAAAAD+//j/BgAAAAAAAAD+//n/BgAAAAAAAAD+/wIABgAAAAAAAAD+/wMABgAAAAAAAAD+/wQABgAAAAAAAAD+/wUABgAAAAAAAAD+/wYABgAAAAAAAAD///f/BgAAAAAAAAD///j/BgAAAAAAAAD///n/BgAAAAAAAAD//wIABgAAAAAAAAD//wMABgAAAAAAAAD//wQABgAAAAAAAAD//wUABgAAAAAAAAD//wYABgAAAAAAAAAAAPf/BgAAAAAAAAAAAPj/BgAAAAAAAAAAAPn/BgAAAAAAAAAAAAIABgAAAAAAAAAAAAMABgAAAAAAAAAAAAQABgAAAAAAAAAAAAUABgAAAAAAAAAAAAYABgAAAAAAAAABAPf/BgAAAAAAAAABAPj/BgAAAAAAAAABAPn/BgAAAAAAAAABAAIABgAAAAAAAAABAAMABgAAAAAAAAABAAQABgAAAAAAAAABAAUABgAAAAAAAAABAAYABgAAAAAAAAACAPf/BgAAAAAAAAACAPj/BgAAAAAAAAACAPn/BgAAAAAAAAACAAIABgAAAAAAAAACAAMABgAAAAAAAAACAAQABgAAAAAAAAACAAUABgAAAAAAAAACAAYABgAAAAAAAAADAPf/BgAAAAAAAAADAPj/BgAAAAAAAAADAPn/BgAAAAAAAAADAAIABgAAAAAAAAADAAMABgAAAAAAAAADAAQABgAAAAAAAAADAAUABgAAAAAAAAADAAYABgAAAAAAAAAEAPf/BgAAAAAAAAAEAPj/BgAAAAAAAAAEAPn/BgAAAAAAAAAEAPr/BgAAAAAAAAAEAAIABgAAAAAAAAAEAAMABgAAAAAAAAAEAAQABgAAAAAAAAAEAAUABgAAAAAAAAAEAAYABgAAAAAAAAAFAPf/BgAAAAAAAAAFAPj/BgAAAAAAAAAFAPn/BgAAAAAAAAAFAPr/BgAAAAAAAAAFAPv/BgAAAAAAAAAFAAIABgAAAAAAAAAFAAMABgAAAAAAAAAFAAQABgAAAAAAAAAFAAUABgAAAAAAAAAFAAYABgAAAAAAAAAGAPf/BgAAAAAAAAAGAPj/BgAAAAAAAAAGAPn/BgAAAAAAAAAGAPr/BgAAAAAAAAAGAPv/BgAAAAAAAAAGAPz/BgAAAAAAAAAGAP3/BgAAAAAAAAAGAP7/BgAAAAAAAAAGAP//BgAAAAAAAAAGAAAABgAAAAAAAAAGAAEABgAAAAAAAAAGAAIABgAAAAAAAAAGAAMABgAAAAAAAAAGAAQABgAAAAAAAAAGAAUABgAAAAAAAAAGAAYABgAAAAAAAAAHAPf/BgAAAAAAAAAHAPj/BgAAAAAAAAAHAPn/BgAAAAAAAAAHAPr/BgAAAAAAAAAHAPv/BgAAAAAAAAAHAPz/BgAAAAAAAAAHAP3/BgAAAAAAAAAHAP7/BgAAAAAAAAAHAP//BgAAAAAAAAAHAAAABgAAAAAAAAAHAAEABgAAAAAAAAAHAAIABgAAAAAAAAAHAAMABgAAAAAAAAAHAAQABgAAAAAAAAAHAAUABgAAAAAAAAAHAAYABgAAAAAAAAD9//b/BgAAAAAAAAD+//b/BgAAAAAAAAD///b/BgAAAAAAAAAAAPb/BgAAAAAAAAABAPb/BgAAAAAAAAACAPb/BgAAAAAAAAD+/wcABgAAAAAAAAD//wcABgAAAAAAAAAAAAcABgAAAAAAAAABAAcABgAAAAAAAAD3//T/BgAAAAAAAAD3//X/BgAAAAAAAAD3//b/BgAAAAAAAAD3//f/BgAAAAAAAAD3//j/BgAAAAAAAAD3//n/BgAAAAAAAAD3//r/BgAAAAAAAAD3//v/BgAAAAAAAAD3//z/BgAAAAAAAAD3//3/BgAAAAAAAAD3//7/BgAAAAAAAAD3////BgAAAAAAAAD3/wAABgAAAAAAAAD3/wEABgAAAAAAAAD3/wIABgAAAAAAAAD3/wMABgAAAAAAAAD3/wQABgAAAAAAAAD3/wUABgAAAAAAAAD3/wYABgAAAAAAAAD3/wcABgAAAAAAAAD4//T/BgAAAAAAAAD4//X/BgAAAAAAAAD4//b/BgAAAAAAAAD4/wcABgAAAAAAAAD5//T/BgAAAAAAAAD5//X/BgAAAAAAAAD5//b/BgAAAAAAAAD5/wcABgAAAAAAAAD6//T/BgAAAAAAAAD6//X/BgAAAAAAAAD6//b/BgAAAAAAAAD6/wcABgAAAAAAAAD7//T/BgAAAAAAAAD7//X/BgAAAAAAAAD7//b/BgAAAAAAAAD7/wcABgAAAAAAAAD8//T/BgAAAAAAAAD8//X/BgAAAAAAAAD8//b/BgAAAAAAAAD8/wcABgAAAAAAAAD9//T/BgAAAAAAAAD9//X/BgAAAAAAAAD9/wcABgAAAAAAAAD+//T/BgAAAAAAAAD+//X/BgAAAAAAAAD///T/BgAAAAAAAAD///X/BgAAAAAAAAAAAPT/BgAAAAAAAAAAAPX/BgAAAAAAAAABAPT/BgAAAAAAAAABAPX/BgAAAAAAAAACAPT/BgAAAAAAAAACAPX/BgAAAAAAAAACAAcABgAAAAAAAAADAPT/BgAAAAAAAAADAPX/BgAAAAAAAAADAPb/BgAAAAAAAAADAAcABgAAAAAAAAAEAPT/BgAAAAAAAAAEAPX/BgAAAAAAAAAEAPb/BgAAAAAAAAAEAAcABgAAAAAAAAAFAPT/BgAAAAAAAAAFAPX/BgAAAAAAAAAFAPb/BgAAAAAAAAAFAAcABgAAAAAAAAAGAPT/BgAAAAAAAAAGAPX/BgAAAAAAAAAGAPb/BgAAAAAAAAAGAAcABgAAAAAAAAAHAPT/BgAAAAAAAAAHAPX/BgAAAAAAAAAHAPb/BgAAAAAAAAAHAAcABgAAAAAAAAAIAPT/BgAAAAAAAAAIAPX/BgAAAAAAAAAIAPb/BgAAAAAAAAAIAPf/BgAAAAAAAAAIAPj/BgAAAAAAAAAIAPn/BgAAAAAAAAAIAPr/BgAAAAAAAAAIAPv/BgAAAAAAAAAIAPz/BgAAAAAAAAAIAP3/BgAAAAAAAAAIAP7/BgAAAAAAAAAIAP//BgAAAAAAAAAIAAAABgAAAAAAAAAIAAEABgAAAAAAAAAIAAIABgAAAAAAAAAIAAMABgAAAAAAAAAIAAQABgAAAAAAAAAIAAUABgAAAAAAAAAIAAYABgAAAAAAAAAIAAcABgAAAAAAAAA=")
tile_set = ExtResource("1_eenkp")
y_sort_origin = -16

[node name="Walls" type="TileMapLayer" parent="."]
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AAD4/wIAAAALAAIAAAD4/wEAAAALAAIAAAD4//n/AAALAAIAAAD4//r/AAALAAIAAAD4//v/AAALAAIAAAD4//z/AAALAAIAAAD4//3/AAALAAIAAAD4//7/AAALAAIAAAD4////AAALAAIAAAD4/wAAAAALAAIAAAAHAPj/AAAIAAEAAAAHAAIAAAAIAAEAAAAHAAEAAAAIAAEAAAAHAAAAAAAIAAEAAAAHAP//AAAIAAEAAAAHAP7/AAAIAAEAAAAHAP3/AAAIAAEAAAAHAPz/AAAIAAEAAAAHAPv/AAAIAAEAAAAHAPr/AAAIAAEAAAAHAPn/AAAIAAEAAAAHAAMAAAAIAAEAAAD4/wMAAAALAAIAAAD4/wYAAAAJAAIAAAD5/wYAAAAJAAIAAAD6/wYAAAAJAAIAAAD7/wYAAAAJAAIAAAD8/wYAAAAJAAIAAAD9/wYAAAALAAIAAAAHAAYAAAAJAAIAAAAGAAYAAAAJAAIAAAAFAAYAAAAJAAIAAAAEAAYAAAAJAAIAAAADAAYAAAAJAAIAAAACAAYAAAAIAAEAAAAHAAQAAAAIAAEAAAAHAAUAAAAFAAEAAAACAAUAAAAIAAAAAAAGAAUAAAAKAAAAAAAFAAUAAAAKAAAAAAAEAAUAAAAKAAAAAAADAAUAAAAKAAAAAAD9/wUAAAALAAAAAAD8/wUAAAAKAAAAAAD7/wUAAAAKAAAAAAD6/wUAAAAKAAAAAAD5/wUAAAAKAAAAAAD4/wUAAAAGAAEAAAD4/wQAAAALAAIAAAD8//b/AAALAAMAAAD7//b/AAAJAAMAAAD6//b/AAAJAAMAAAD5//b/AAAJAAMAAAD4//b/AAAGAAIAAAAHAPb/AAAFAAIAAAAGAPb/AAAJAAMAAAAFAPb/AAAJAAMAAAAEAPb/AAAJAAMAAAADAPb/AAAIAAMAAAD4//X/AAAJAAIAAAD5//X/AAAJAAIAAAD6//X/AAAJAAIAAAD7//X/AAAJAAIAAAD8//X/AAALAAEAAAAHAPX/AAAJAAIAAAAGAPX/AAAJAAIAAAAFAPX/AAAJAAIAAAAEAPX/AAAJAAIAAAADAPX/AAAFAAAAAAAIAP7/AAAJAAIAAAAIAP3/AAAJAAIAAAAIAPz/AAAJAAIAAAAIAPv/AAAJAAIAAAAIAPr/AAAJAAIAAAAIAPn/AAAJAAIAAAAIAPj/AAAJAAIAAAAIAPf/AAAJAAIAAAAIAPb/AAAJAAIAAAAIAPX/AAAJAAIAAAD3//7/AAAJAAIAAAD3//3/AAAJAAIAAAD3//z/AAAJAAIAAAD3//v/AAAJAAIAAAD3//r/AAAJAAIAAAD3//n/AAAJAAIAAAD3//j/AAAJAAIAAAD3//f/AAAJAAIAAAD3//b/AAAJAAIAAAD4//f/AAALAAIAAAD4//j/AAALAAIAAAAHAPf/AAAIAAEAAAD3//X/AAAJAAIAAAD3/wYAAAAJAAIAAAD3/wUAAAAJAAIAAAD3/wQAAAAJAAIAAAD3/wMAAAAJAAIAAAD3/wIAAAAJAAIAAAD3/wEAAAAJAAIAAAD3/wAAAAAJAAIAAAD3////AAAJAAIAAAD9/wcAAAALAAIAAAD8/wcAAAAJAAIAAAD7/wcAAAAJAAIAAAD6/wcAAAAJAAIAAAD5/wcAAAAJAAIAAAD4/wcAAAAJAAIAAAD3/wcAAAAJAAIAAAAHAAcAAAAJAAIAAAAGAAcAAAAJAAIAAAAFAAcAAAAJAAIAAAAEAAcAAAAJAAIAAAADAAcAAAAJAAIAAAACAAcAAAAIAAEAAAAIAAcAAAAJAAIAAAAIAAYAAAAJAAIAAAAIAAUAAAAJAAIAAAAIAAQAAAAJAAIAAAAIAAMAAAAJAAIAAAAIAAIAAAAJAAIAAAAIAAEAAAAJAAIAAAAIAAAAAAAJAAIAAAAIAP//AAAJAAIAAAD9//X/AAADAAIAAAD9//T/AAAAAAAAAAACAPX/AAABAAIAAAACAPT/AAAAAAAAAAA=")
tile_set = ExtResource("1_eenkp")
y_sort_origin = -16

[node name="SouthWarp" parent="." instance=ExtResource("3_eyb6e")]
position = Vector2(0, 144)
room_id = "02_hub"
target_position = Vector2(0, -232)
target_orientation = Vector2(0, 1)
metadata/_edit_group_ = true

[node name="CollisionShape2D" parent="SouthWarp" index="0"]
shape = SubResource("RectangleShape2D_4lfqm")

[node name="NorthGate" type="Area2D" parent="."]
position = Vector2(0, -184)
collision_layer = 0
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="NorthGate"]
shape = SubResource("RectangleShape2D_5avj4")

[node name="BossTrigger" type="Area2D" parent="."]
position = Vector2(0, -86)
collision_layer = 0
monitorable = false
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossTrigger"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_5avj4")

[node name="BattleSpot" parent="." instance=ExtResource("5_jdwon")]
position = Vector2(0, -102)

[node name="Marker2D" type="Marker2D" parent="BattleSpot/PartySpots" index="0"]
position = Vector2(-56, 58)

[node name="Marker2D2" type="Marker2D" parent="BattleSpot/PartySpots" index="1"]
position = Vector2(56, 58)

[node name="EnemySpot" type="Marker2D" parent="BattleSpot/EnemySpots" index="0"]
position = Vector2(0, -26)
script = ExtResource("6_mblpi")

[node name="Thymiaterion" parent="." instance=ExtResource("6_2020d")]
visible = false
position = Vector2(0, -128)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rk4g2")
}
autoplay = "default"

[node name="RightDoor" type="Sprite2D" parent="."]
position = Vector2(0, -176)
texture = ExtResource("8_lox2j")
centered = false
offset = Vector2(0, -59)

[node name="LeftDoor" type="Sprite2D" parent="."]
position = Vector2(0, -176)
texture = ExtResource("9_33mal")
centered = false
offset = Vector2(-32, -59)

[node name="Lamp" type="AnimatedSprite2D" parent="."]
position = Vector2(-88, -152)
sprite_frames = SubResource("SpriteFrames_3u8eh")
autoplay = "default"
offset = Vector2(-0.5, -20)

[node name="Lamp2" type="AnimatedSprite2D" parent="."]
position = Vector2(88, -152)
sprite_frames = SubResource("SpriteFrames_3u8eh")
offset = Vector2(0.5, -20)

[connection signal="body_entered" from="NorthGate" to="." method="_on_north_gate_body_entered"]
[connection signal="body_entered" from="BossTrigger" to="." method="_on_boss_trigger_body_entered"]

[editable path="SouthWarp"]
[editable path="BattleSpot"]
[editable path="Thymiaterion"]
[editable path="Thymiaterion/Anim"]
[editable path="Thymiaterion/Battler"]
[editable path="Thymiaterion/Battler/Toast"]
